--- a/app/src/main/res/layout/recipe_listview.xml
+++ b/app/src/main/res/layout/recipe_listview.xml
@@ -5,13 +5,7 @@
 
     <ListView
         android:id="@+id/listView"
-        android:layout_width="310dp"
-        android:layout_height="309dp"></ListView>
+        android:layout_width="match_parent"
+        android:layout_height="590dp"></ListView>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:onClick="loadButton"
-        android:text="@string/Load_button" />
 </LinearLayout>
