--- a/app/src/main/res/layout/recipe_listview.xml
+++ b/app/src/main/res/layout/recipe_listview.xml
@@ -6,6 +6,6 @@
     <ListView
         android:id="@+id/listView"
         android:layout_width="match_parent"
-        android:layout_height="590dp"></ListView>
+        android:layout_height="match_parent"></ListView>
 
 </LinearLayout>
